--- a/wp-content/themes/oceanwp-child-theme-master/style.css
+++ b/wp-content/themes/oceanwp-child-theme-master/style.css
@@ -16,6 +16,7 @@ Version: 1.0
     background-color:white;
     padding:6px 16px;
     border-radius:6px;
+    margin-top: 22px;
 }
 .popup-overlay{
     position:fixed;
